Fix overflow behavior in cookie preview header for narrow widths
Screencast: https://i.imgur.com/Dtvy6NN.mp4

Fixed: 369739213
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5894909
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/application/cookieItemsView.css
+++ b/front_end/panels/application/cookieItemsView.css
@@ -20,6 +20,7 @@
 
 .cookie-preview-widget-header-label {
   line-height: 18px;
+  flex-shrink: 0;
 }
 
 .cookie-preview-widget-cookie-value {
@@ -32,4 +33,5 @@
 .cookie-preview-widget-toggle {
   margin-left: 12px;
   font-weight: normal;
+  flex-shrink: 1;
 }
